--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,67 +1,89 @@
 
-*,
-*::before,
-*::after {
-
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style: none;
-  border: none;
-
+/* for all */
+*{
+  margin:0;
+  padding:0;
+  box-sizing:boarder-box;
+  text-align:none;
+  list-style:none;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* declaring variables for spcific properties */
-:root {
-
-  --primary-color-hue: 252;
-  --dark-color-lightness: 17%;
-  --light-color-lightness: 95%;
-  --white-color-lightness: 100%;
-
-
-
-  --color-white: hsl(252, 30%, var(--white-color-lightness));
-  --color-light: hsl(252, 30%, var(--light-color-lightness));
-  --color-gray: hsl(252, 15%, 65%);
-  --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
-  --color-secondary: hsl(252, 100%, 90%);
-  --color-success: hsl(120, 95%, 65%);
-  --color-danger: hsl(0, 95%, 65%);
-  --color-dark: hsl(252, 30%, var(--dark-color-lightness));
-  --color-black: hsl(252, 30%, 10%);
-
-  --border-radius: 2rem;
-  --card-border-radius: 1rem;
-  --btn-padding: 0.6rem 2rem;
-  --search-padding: 0.6rem 1rem;
-  --card-padding: 1rem;
-
-  --sticky-top-left: 5.4rem;
-  --sticky-top-right: -18rem;
-
+:root{
+  --color-primary:#6c63ff;
+  --text-color:black;
+  --color-bg:rgb(236,236,236);
+  --color-card:white;
+  --color-soft:#aaaaaa;
+  --color-border:lightgrey;
+  --color-red:red;
 }
 
-body {
-  font-family: Poppins, sans-serif;
-  color: var(--color-dark);
-  background: var(--color-light);
-  /* to not have scroll bar horizontally */
-  overflow-x: hidden;
-  transform: scale(1);
+/* classSelctor */
+
+.container{
+  max-width:991px;
+  width:100%;
+  margin:0 auto;
 }
 
-.custom-container {
-  width: 80%;
-  margin: 0 auto;
+h1,h2,h3,h4,h5{
+  font-weight: 600;
+  color: (--text-color);
 }
 
-.profile-photo {
-  width: 2.7rem;
-  aspect-ratio: 1/1;
-  border-radius: 50%;
-  /* extra photo hide? */
-  overflow: hidden;
+img{
+  width:100%;
+  display:block;
+  object-fit:cover;
+}
+
+.user{
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
+
+.user img{
+  width:33px;
+  aspect-ratio:1/1;
+  border-radius:50% ;
+}
+
+.user h4{
+  color:var(--color-primary);
+}
+
+body{
+  background:var(--color-bg);
+  color:var(--color-soft);
+}
+
+small,p{
+  color:var(--color-soft);
+}
+
+.btn{
+   padding:.6rem 1.6rem;
+   display:inline-block;
+   width:fit-content;
+   cursor:pointer;
+   border-radius: .5rem;
+   border:none;
+   font-size: .9rem;
+   font-weight:500;
+   transition: .3s ease;
+}
+
+.btn:hover{
+  opacity: .7;
+}
+.btn-primary{
+  background:var(--color-primary);
+  color:white;
+}
+
+.btn-red{
+  background:var(--color-red);
+  color:white;
 }
