--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,20 +38,43 @@
     --color-soft: #aaaaaa;
 }
 
-/* classSelctor */
+
+
+main {
+  
+  /* margin-top:30px; */
+  display: grid;
+  /* justify-content: space-around; */
+  grid-template-columns: 20% 80%;
+  gap: 3%;
+  width: 100vw;
+  max-height: calc(100vh - 3.6rem);
+  overflow-y: auto;/*for nav*/
+    /* scroll happens here */
+}
+
+@media(max-width:990px){
+  main{
+    display:block;
+  }
+}
+
+
 body {
   background: var(--color-bg);
   color: var(--color-soft);
-  overflow: hidden;
 
 }
+
 
 .container{
-  max-width:991px;
-  width:100%;
-  height:100%;
-  margin:0 auto;
+ /* width:97%; */
+  /* border: solid;
+  border-radius: 10px; */
+  /* max-height: calc(100vh - 3.9rem); */
+  overflow-y:auto;/*scrollable*/
 }
+
 
 h1,h2,h3,h4,h5{
   font-weight: 600;
@@ -112,18 +135,26 @@ small,p{
   color:rgb(224, 12, 12);
 }
 
-
-main{
-  background-color:var(--color-bg );
-  display:grid;
- /* justify-content: space-around; */
-  grid-template-columns: 20% 80%;
-  gap:3%;
-  width: 100%; 
-  height:100vh;
-}
-
 .nav-home{
   width:20px;
   height:20px;
 }
+
+
+.deck-card{
+        border: solid 5px;
+        background: var(--color-card);
+        padding: var(--card-padding);
+        width: 20rem;
+        height: 25rem;
+        display: grid;
+        grid-template-rows: 80% 20%;
+        justify-items: center; /* vertical centering */
+        align-items: center;
+        
+}
+/* @media(max-width:991px) {
+  .deck-card {
+    width: 20rem;
+  }
+} */
