--- a/frontend/src/components/content/content.css
+++ b/frontend/src/components/content/content.css
@@ -1,10 +1,19 @@
 
-.content{
-    display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        /* 2 cards per row */
-        gap: 20px;
-        /* spacing between cards */
-        justify-content: center;
-        padding: 20px;
+
+.decks-container{
+
+    display:grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 per row */
+    justify-items: center;
+    gap: 20px;/* spacing between cards */
+    width: 100%;
+    margin-top: 20px;
+    /* scrolable inherit by main */
+}
+
+@media (max-width: 778px) {
+    .decks-container {
+        grid-template-columns: repeat(1, 1fr);
+        /* 1 per row on smaller screens */
+    }
 }
