--- a/frontend/src/pages/Deck/deckviewer.css
+++ b/frontend/src/pages/Deck/deckviewer.css
@@ -10,6 +10,7 @@
 .cards-container{
 
   display:flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background:var(--color-bg);
@@ -17,10 +18,10 @@
   overflow: hidden;
 }
 
-.info p{
-  color:#fff;
+h3{
+  color: var(--color-primary);
   font-weight:500;
-  font-size: 1rem;
+  font-size: 2.3rem;
   margin-bottom: 20px;
   line-height: 1.5;
 }
