--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -11,12 +11,16 @@
 
 .heading{
   height: 4.5rem;
-border: solid;
-border-radius: 10px;
+  border: solid;
+ border-radius: 10px;
  background-color:var(--color-card);
  text-align: center;
+
  margin-bottom:20px; 
  position:sticky;
  top:0;/*relative to nearest scrollable ancestor */ 
 
+ display:flex;
+ justify-content: space-around;
+ align-items: center;
 }
