--- a/frontend/src/pages/Deck/deckviewer.css
+++ b/frontend/src/pages/Deck/deckviewer.css
@@ -18,9 +18,9 @@
   overflow: hidden;
 }
 
-h3{
+.cards-container .heading{
   color: var(--color-primary);
-  font-weight:500;
+  font-weight:bolder;
   font-size: 2.3rem;
   margin-bottom: 20px;
   line-height: 1.5;
