--- a/frontend/src/components/generateDeck/generateDeck.css
+++ b/frontend/src/components/generateDeck/generateDeck.css
@@ -11,11 +11,15 @@
     padding:15px;
     width:100%;
     height:calc(100vh-3.8rem);
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
-    border: solid;
+    /* border: solid; */
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    background: #ccddea;
+   
  }
 
 
@@ -32,16 +36,40 @@
 .form input {
     padding: 0.5rem;
     font-size: 1rem;
-    border:solid;
+    border-radius: 5px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    /* border:solid; */
     
 }
 
 #prompt {
     height: 7rem;
-    border: solid;
+    /* border: solid; */
+    border-radius: 5px;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
     /* taller than others */
 }
 
+ .generate-container .btn {
+
+    padding: .6rem 1.6rem;
+    display: inline-block;
+    width: fit-content;
+    cursor: pointer;
+    border-radius: .5rem;
+    border: none;
+    font-size: .9rem;
+    font-weight: 500;
+    transition: .3s ease;
+    background: var(--text-color2);
+    color: white;
+}
+ .generate-container .btn:hover {
+    transform: scale(1.05) translateY(-2px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    background: var(--text-color2);
+    /* optional */
+}
 
 
 
@@ -65,12 +93,14 @@
     align-content: center;
     align-items: center;
     /* background: var(--color-bg); */
-    min-height: 100vh;
+    height: 40rem;
     overflow: hidden;
 }
-
-h4{
-    color:var(--color-primary);
+ 
+.generate-container .heading {
+    color: var(--text-color2);
+    font-weight: bolder;
+    background-color: #ccddea;
 }
 
 
