--- a/frontend/src/pages/profile/profile.css
+++ b/frontend/src/pages/profile/profile.css
@@ -4,8 +4,35 @@
     /* center horizontally */
     align-items: center;
     /* center vertically */
-    min-height: 200px;
-    /* give some space */
+    gap:20px;
 }
 
 /*  */
+
+.user .upload{
+    display: flex;
+    justify-content: center;
+    /* center horizontally */
+    align-items: center;
+    /* center vertically */
+    gap:10px;
+}
+
+.profile-container .upload-btn {
+    padding: 1rem;
+    display: inline-block;
+    width: fit-content;
+    cursor: pointer;
+    border-radius: .5rem;
+    border: none;
+    font-size: .9rem;
+    font-weight: 500;
+    transition: .3s ease;
+    background: var(--text-color2);
+    color: white;
+}
+
+.profile-container .upload-btn:hover {
+    transform: scale(1.05) translateY(-2px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
